@@ -1,1 +1,1 @@
-#define KPANEL_VERSION "kpanel-0.19.10"
+#define KPANEL_VERSION "kpanel-0.19.11"
